@@ -1,6 +1,8 @@
 v.1.5.3.009
 - widened tolerance on 16:9 proportion check from last.fm
 - musicbrainz lookup now validates artist based on releases, recordings, then works
+- updated musicbrainz search to better deal with featured artists
+- updated musicbrainz search to work with add-ons that call AS remotely
 
 v.1.5.3.008
 - fixed for error regression in removing beginning articles from artist name for search
